<resources>
    <string name="app_name">Activities_Permisos_List</string>

    <string name="button_to_cycle">1. To Life Cycle Events</string>
    <string name="button_to_click">2. To Click Events</string>
    <string name="button_to_android_extensions">3. To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4. To Picasso</string>
    <string name="button_to_list_view">5. To List View</string>
    <string name="button_to_intents">6. To Intents</string>
    <string name="button_to_permissions">7. To Permissions</string>
    <string name="button_to_shared_preferences">8. To shared Preferences</string>
    <string name="button_to_extension_functions">9. To Extension Functions</string>
    <string name="title_activity_click_events">ClickEventsActivity</string>
    <string name="button_click_xml">Click By XML</string>
    <string name="button_click_line">Click In Line</string>
    <string name="button_multi_1">Multiple Buttons 1</string>
    <string name="button_multi_2">Multiple Buttons 2</string>
    <string name="button_multi_3">Multiple Buttons 3</string>
    <string name="button_kat_id">Button by findviewbyid</string>
    <string name="button_kat_kat">Button by kat</string>
    <string name="button_intent_extras">Intent with Extras</string>
    <string name="button_intent_flags">Intent with Flags</string>
    <string name="button_intent_object">Intent with Object</string>
    <string name="button_back">Go Back</string>
    <string name="button_take_picture">Take a picture</string>
    <string name="preferences_name_hint">Type name here</string>
    <string name="preferences_age_hint">Type age here</string>
    <string name="button_save">Save</string>
    <string name="extensions_toast">Toast</string>
    <string name="extensions_snack_bar">Snack bar</string>
    <string name="extensions__load_url">Load Url</string>
    <string name="extensions_go_to_activity">Go to activity</string>
</resources>
